Complete_ASG_TF/Modules/Security_Group/main.tf
resource "aws_security_group" "alb_security_group" {
  
  name = "Alb Security Group"
  description = "Enabling SSH and HTTP"

  vpc_id = var.vpc_id

  ingress{
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress{
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    tags   = {
     Name    = "${var.project_name}-sg"
  }

}
